--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
   "require": {
     "php": "^8.1",
     "ext-dom": "*",
-    "cspray/architectural-decision": "dev-release-2.x"
+    "cspray/architectural-decision": "^2.0"
   },
   "autoload": {
     "psr-4": {
