--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
   "name": "cspray/annotated-container-adr",
   "description": "Architectural Decision Records for Annotated Container and its associated libraries.",
+  "license": ["MIT"],
   "require": {
-    "php": "^8.1",
-    "ext-dom": "*",
+    "php": "^8.3",
     "cspray/architectural-decision": "^3.0.0.alpha"
   },
   "autoload": {
